notification prod failure fix